--- a/menu.html
+++ b/menu.html
@@ -139,7 +139,7 @@
     <div class="grid-container">
         <div id="item-gatorade" class="menu-item" onclick="addToCart('Gatorade', 1.50)" style="background-image: linear-gradient(var(--card-overlay), var(--card-overlay)), url('IMG_0748.png');">
             <div><h3 style="margin:0">Gatorade</h3><p style="margin:5px 0 0; color:#636e72;">Cool Blue or Fruit Punch</p></div>
-            <div class="price-tag">$1.50</div>
+            <div class="price-tag">$2.00</div>
         </div>
         <div id="item-water" class="menu-item" onclick="addToCart('Water', 1.00)" style="background-image: linear-gradient(var(--card-overlay), var(--card-overlay)), url('IMG_0749.jpeg');">
             <div><h3 style="margin:0">Water</h3><p style="margin:5px 0 0; color:#636e72;">Bottled and Refreshing</p></div>
@@ -150,8 +150,8 @@
     <div class="category-title">Crunchy Snacks</div>
     <div class="grid-container">
         <div id="item-takis" class="menu-item" onclick="addToCart('Takis Fuego', 0.50)" style="background-image: linear-gradient(var(--card-overlay), var(--card-overlay)), url('IMG_0750.jpeg');">
-            <div><h3 style="margin:0">Takis Fuego</h3><p style="margin:5px 0 0; color:#636e72;">Large Share Size</p></div>
-            <div class="price-tag">$0.50</div>
+            <div><h3 style="margin:0">Takis Fuego</h3><p style="margin:5px 0 0; color:#636e72;">Small bagy</p></div>
+            <div class="price-tag">$1.00</div>
         </div>
     </div>
 
@@ -268,4 +268,5 @@
         }
     </script>
 </body>
+
 </html>
