--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     </section>
 
     <div class="status-bar">
-        <span class="dot-out"></span> 
-        Currently unavailable at NJHS
+        <span class="stadus-bar"></span> 
+        Currently available at NJHS
     </div>
 
     <footer>
