--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             --accent: #ff6b6b; 
             --card-shadow: 15px 15px 40px #e0dfdb, -15px -15px 40px #ffffff;
             --text: #2d3436;
+            --success: #2ecc71; /* Green color for the status dot */
         }
 
         body {
@@ -75,8 +76,34 @@
         .cta-banner h2 { font-size: 2.5rem; margin: 0 0 20px 0; }
         .white-btn { background: white; color: var(--accent); padding: 15px 35px; border-radius: 15px; text-decoration: none; font-weight: 800; transition: 0.3s; display: inline-block; }
 
-        .status-bar { margin-top: 40px; font-size: 0.85rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; display: flex; align-items: center; gap: 10px; }
-        .dot-out { height: 8px; width: 8px; background-color: #FF0000; border-radius: 50%; display: inline-block; }
+        /* --- Updated Status Bar & Pulsing Dot --- */
+        .status-bar { margin-top: 40px; font-size: 0.85rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; display: flex; align-items: center; gap: 12px; }
+        
+        .dot-out { 
+            height: 10px; 
+            width: 10px; 
+            background-color: var(--success); 
+            border-radius: 50%; 
+            display: inline-block; 
+            position: relative;
+        }
+
+        .dot-out::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: var(--success);
+            animation: pulse-ring 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+        }
+
+        @keyframes pulse-ring {
+            0% { transform: scale(0.33); opacity: 0.8; }
+            80%, 100% { transform: scale(2.5); opacity: 0; }
+        }
 
         #cart-sidebar { position: fixed; right: -350px; top: 0; width: 300px; height: 100%; background: white; box-shadow: -10px 0 30px rgba(0,0,0,0.1); z-index: 2000; transition: 0.4s; padding: 30px; display: flex; flex-direction: column; box-sizing: border-box; }
         #cart-sidebar.open { right: 0; }
@@ -153,7 +180,7 @@
     </section>
 
     <div class="status-bar">
-        <span class=stadus-bar"></span> 
+        <span class="dot-out"></span> 
         Currently available at NJHS
     </div>
 
@@ -208,7 +235,7 @@
 
         updateUI();
 
-        // --- SEARCH SYSTEM (Fruit Snacks Removed) ---
+        // --- SEARCH SYSTEM ---
         const searchData = [
             { name: "Takis Fuego", info: "$0.50", price: 0.50, type: "snack", target: "menu.html" },
             { name: "Water", info: "$1.00", price: 1.00, type: "snack", target: "menu.html" },
